[package]
name = "fibers_http_client"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A tiny asynchronous HTTP/1.1 client library"
homepage = "https://github.com/sile/fibers_http_client"
repository = "https://github.com/sile/fibers_http_client"
readme = "README.md"
categories = ["web-programming::http-client"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/fibers_http_client"}
codecov = {repository = "sile/fibers_http_client"}

[dependencies]
bytecodec = "0.4"
fibers = "0.1"
futures = "0.1"
httpcodec = "0.2"
prometrics = "0.1"
trackable = "0.2"
url = "1"

[dev-dependencies]
clap = "2"
fibers_global = "0.1"
fibers_http_server = "0.1"
